--- a/WebBeacon/Views/Home/Index.cshtml
+++ b/WebBeacon/Views/Home/Index.cshtml
@@ -1,108 +1,106 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="list-group">
+                    <a href="#" class="list-group-item active">
+                        <i class="glyphicon glyphicon-dashboard"></i> Dashboard
+                    </a>
+                    <a href="#" class="list-group-item"><i class="glyphicon glyphicon-file"></i> Pages</a>
+                    <a href="#" class="list-group-item"><i class="glyphicon glyphicon-folder-open"></i> Categories</a>
+                    <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user"></i> User Accounts</a>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <h1 class="page-header"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</h1>
+                <h3>Latest Pages</h3>
+                <table class="table table-striped">
+                    <tr>
+                        <th>Page Title</th>
+                        <th>Category</th>
+                        <th>Author</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="page.html">Sample Page One</a>
+                        </td>
+                        <td>Category One</td>
+                        <td>John Doe</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="page.html">Sample Page Two</a>
+                        </td>
+                        <td>Category Two</td>
+                        <td>John Doe</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="page.html">Sample Page Three</a>
+                        </td>
+                        <td>Category Two</td>
+                        <td>Brad Traversy</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="page.html">Sample Page Four</a>
+                        </td>
+                        <td>Category One</td>
+                        <td>John Doe</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="page.html">Sample Page Five</a>
+                        </td>
+                        <td>Category Three</td>
+                        <td>James Smith</td>
+                    </tr>
+                </table>
+                <a class="btn btn-default" href="pages.html">View All Pages</a>
+                <hr>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+                <h3>Latest Users</h3>
+                <table class="table table-striped">
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Group</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="user.html">Brad Traversy</a>
+                        </td>
+                        <td>techguyinfo@gmail.com</td>
+                        <td>Admin</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="user.html">John Doe</a>
+                        </td>
+                        <td>jdoe@gmail.com</td>
+                        <td>Admin</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="user.html">James Smith</a>
+                        </td>
+                        <td>jamessmith@gmail.com</td>
+                        <td>Registered</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="user.html">Lisa Gibbons</a>
+                        </td>
+                        <td>lgibbons@gmail.com</td>
+                        <td>Registered</td>
+                    </tr>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+                </table>
+                <a class="btn btn-default" href="users.html">View All Users</a>
+            </div>
+        </div>
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+</section>
