--- a/WebBeacon/Views/MyBeacons/Index.cshtml
+++ b/WebBeacon/Views/MyBeacons/Index.cshtml
@@ -19,50 +19,24 @@
             </div>
             <div class="col-md-8">
                 <h1 class="page-header"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</h1>
-                <h3>Latest Pages</h3>
+                <h3>Aangemaakte Beacons</h3>
                 <table class="table table-striped">
                     <tr>
-                        <th>Page Title</th>
-                        <th>Category</th>
-                        <th>Author</th>
+                        <th>Html markup</th>
+                        <th>Beacon naam</th>
+                        <th>Actie</th>
+                        
                     </tr>
                     <tr>
                         <td>
-                            <a href="page.html">Sample Page One</a>
+                            <a href="#">Tonen</a>
                         </td>
-                        <td>Category One</td>
-                        <td>John Doe</td>
+                        <td> beaconnaam </td>
+                        <td> <a href="#">Details</a> <a href="#">Verwijderen</a> </td>
                     </tr>
                     <tr>
-                        <td>
-                            <a href="page.html">Sample Page Two</a>
-                        </td>
-                        <td>Category Two</td>
-                        <td>John Doe</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="page.html">Sample Page Three</a>
-                        </td>
-                        <td>Category Two</td>
-                        <td>Brad Traversy</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="page.html">Sample Page Four</a>
-                        </td>
-                        <td>Category One</td>
-                        <td>John Doe</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="page.html">Sample Page Five</a>
-                        </td>
-                        <td>Category Three</td>
-                        <td>James Smith</td>
-                    </tr>
                 </table>
-                <a class="btn btn-default" href="pages.html">View All Pages</a>
+                <a class="btn btn-default" href="pages.html"><i class="glyphicon glyphicon-plus"></i> Nieuw</a>
                 <hr>
 
                 <h3>Latest Users</h3>
