--- a/WebBeacon/wwwroot/css/style.css
+++ b/WebBeacon/wwwroot/css/style.css
@@ -2,6 +2,10 @@
    
 }*/
 
+html, body {
+    height: 100%
+}
+
 .navbar{
 	border-radius: 0;
 }
@@ -52,13 +56,18 @@ body#login h2{
   border-top-right-radius: 0;
 }
 
-footer{
-	margin-top:30px;
-	padding-top:20px;
-	height:60px;
-	text-align: center;
-	background-color: #1f87c2;
-	color:#fff;
+footer {
+    bottom: 4px;
+    left: 0;
+    position: absolute;
+    right: 0;
+
+    margin-top: 30px;
+    padding-top: 7px;
+    height: 33px;
+    text-align: center;
+    background-color: #1f87c2;
+    color: #fff;
 }
 
 .actions{
